unix/lang/tests/error/library2e.yab
# Simple library that can be imported without problems
